# config

./: .dockerignore  .emacs  .gitconfig  .gitignore  .mybashrc.bash  Dockerfile  Makefile
.config/bash/: bashrc.bash
.config/docker/: config.json
.config/emacs/: Makefile  dune  emacs-config.opam  init.el  init.ml
.config/emacs/insert/latex/: Makefile
.config/emacs/lib/: Makefile  dune
.config/emacs/lib/ecamlx/: ansi_color.ml  ansi_color.mli  auctex.ml  auctex.mli  auto_insert.ml  auto_insert.mli  cc_mode.ml  cc_mode.mli  comint.ml  comint.mli  command.ml  command.mli  comment.ml  comment.mli  compilation.ml  compilation.mli  current_buffer.ml  current_buffer.mli  custom.ml  custom.mli  customization.ml  customization.mli  debian_el.ml  debian_el.mli  defun.ml  defun.mli  diff_mode.ml  diff_mode.mli  dired.ml  dired.mli  display.ml  display.mli  dune  ecamlx.ml  ecamlx.mli  eglot.ml  eglot.mli  eldoc.ml  eldoc.mli  ffap.ml  (+90 more)
.config/emacs/lib/init-packages/: dune  init_packages.ml
.config/emacs/lib/my/: dune  my.ml  my.mli
.config/emacs/lib/position/: position.ml  position.mli
.config/emacs/lisp/: ecamlx.ml  ecamlx.mli  emacs-config.opam  my.el  my.ml  my0.el
.config/git/: config  ignore
.emacs.d/insert/c/: Makefile
.emacs.d/lisp/: my.el
.gnupg/: gpg-agent.conf
X11/: Xresources  xsessionrc
apt/: sources.list
bash/: bash_aliases.bash  bashrc.bash
ctags/: ctags
emacs/: gnus-init.el  init.el  signature
emacs/lisp/: my.el
git/: gitconfig  gitignore
latex/: preamble.tex
latexmk/: latexmkrc.pl
ocaml/: ocamlinit.ml
readline/: inputrc
(+5 files in other folders)
