opam-version: "2.0"
synopsis: "Emacs configuration"
maintainer: "Idir Lankri <ilankri@protonmail.com>"
authors: "Idir Lankri <ilankri@protonmail.com>"
homepage: "https://gitlab.com/ilankri/dotfiles"
bug-reports: "https://gitlab.com/ilankri/dotfiles/-/issues"
depends: [
  "ocaml" {>= "5.1.1" & < "5.2.0"}
  "dune" {>= "3.12.1" & < "4.0.0"}
  "ecaml" {>= "v0.16.0" & < "v0.17.0"}
  "sexplib0" {>= "v0.16.0" & < "v0.17.0"}
  "async_kernel" {>= "v0.16.0" & < "v0.17.0"}
  "ocamlformat" {dev & = "0.26.1"}
]
